Ver. 4.0
    - Feature: Converted lshca utility to library
Ver. 3.0
    - Feature: Added RoCE view. New fields are: Operstate and RoCEstat
    - Feature: Added HCA temperature reading to HCA header
    - Feature: Added revision to PN
    - Feature: Added extended help with all fields descriptions
    - Feature: lshca returns 1 if output is empty
    - Change: Negative output filter changed from -o with - to -onot. See help for more details
    - Change: HCA header design changed. Removed ":","-" and more
    - Major code refactoring
Ver. 2.6
    - Feature: Added "by field value" output filter
    - Feature: Added views option, default view called "system"
    - Feature: Added "ib" view that contains IB network oriented information
    - Feature: Added saquery data source. It provides following data: SMGuid, SwGuid, SwDescription
    - Feature: Added following data to sysfs data source: VrtHCA, PLid, PGuid, IbNetPref
    - Change: JSON affected by output filters
    - Change: Warnings and errors won't be visible in JSON output and/or if the output is not to terminal
Ver. 2.5
    - Feature: added LnkCap and LnkSta Width functionality
    - Feature: Performance improvement with ConnectX3 HCAs
    - Feature: Added JSON output
    - Feature: Added "-o" parameter to control output fields
Ver. 2.4
    - Fixed bug: port identification via dev_id and dev_port (issue #13)
    - Minor bugs: issue #15
Ver. 2.3
    - Feature: added MST info source
    This brought python version of lshca to same functionality as bash version
    