@@ -6,11 +6,20 @@
 
 import os
 
-import service_function
-from config import Config
-from datasource import DataSource
-from raw_mlnx_bdf_device import RawMlnxBDFDevice as MlnxBDFDevice
-from mlx_hca import MlnxHCA
+import sys
+
+if sys.version_info.major == 3:
+    from . import service_function
+    from .config import Config
+    from .datasource import DataSource
+    from .raw_mlnx_bdf_device import RawMlnxBDFDevice as MlnxBDFDevice
+    from .mlx_hca import MlnxHCA
+else:
+    import service_function
+    from config import Config
+    from datasource import DataSource
+    from raw_mlnx_bdf_device import RawMlnxBDFDevice as MlnxBDFDevice
+    from mlx_hca import MlnxHCA
 
 
 class HCAManager(object):
